# datamailer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml
.claude/agents/: designer.md  oncall-engineer.md  product-manager.md  software-engineer.md  tester.md
.github/workflows/: ci.yml  cli.yml  deploy-sandbox.yml
cli/: README.md  pyproject.toml
cli/datamailer_cli/: __init__.py  api.py  cli.py  config.py  templates.py
cli/tests/: conftest.py  test_config.py  test_send.py
datamailer/: asgi.py  oidc.py  settings.py  urls.py  wsgi.py
docs/: PROCESS.md  api.md  architecture.md  data-model.md  design-system.md  infra-deploy.md  issues.md  milestones.md  operations.md  testing-guidelines.md  testing.md  worker-contracts.md
docs/audits/: 2026-07-03-operator-ux-audit.md
docs/runbooks/: infra-operations.md
infra/cloudformation/: datamailer-mvp.json
infra/config/: production.parameters.example.json  staging.parameters.example.json  web.env.example
mailing/: admin.py  aws.py  context_processors.py  forms.py  models.py  queue_contracts.py  ses.py  sqs.py  sqs_worker.py  tests.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_campaign_campaignrecipient_and_more.py  0003_emailtemplate_transactionalmessage_emailevent_and_more.py  0004_emailevent_provider_event_id.py  0005_contact_email_validation.py  0006_operator_audit.py  0007_contact_source_metadata.py  0008_transactional_template_catalog.py  0009_multiple_client_api_keys.py  0010_client_allowed_from_emails_client_default_from_email_and_more.py  0011_client_default_sender_id_client_sender_emails_and_more.py  0012_recipientlist_recipientlistmember_and_more.py  0013_client_cmp_webhook_token_client_cmp_webhook_url_and_more.py  0014_alter_transactionalmessage_status.py  0015_categorypreference.py  0016_campaign_external_key.py  (+8 more)
scripts/: inspect_inbound_mail.py  install_sandbox_worker_service.sh  smoke_test_sandbox.py  smoke_test_staging.py  upsert_cmp_templates.py  upsert_homework_confirmation_template.py  validate_infra.py
templates/: base.html
terraform/: README.md
tests/: test_infra_definitions.py  test_inspect_inbound_mail.py  test_oidc_auth.py  test_smoke_test_sandbox.py
tests_integration/: test_transactional_api_localstack.py
(+122 files in other folders)
