[project]
name = "datamailer"
version = "0.1.0"
description = "Command-line client for sending email through a Datamailer deployment."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DataTalks.Club" }]
keywords = ["email", "cli", "datamailer", "transactional", "smtp"]
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/DataTalksClub/datamailer"
Repository = "https://github.com/DataTalksClub/datamailer"

[project.scripts]
datamailer = "datamailer_cli.cli:main"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datamailer_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
